GET /trip und /trip/{tripId}
